package dev.lachelngose.adManagement.domain.payment.model

enum class PaymentStatus {
    PENDING,
    PAID,
    FAILED,
    NONE,
}
