package dev.lachelngose.admangement.domain.entity

enum class UserRole {
    ADMIN,
    USER,
}
